tests/semantic/invalid/void_variable.src
fn main() -> int {
    void x;
    return 0;
}
